--- a/config.ini.example
+++ b/config.ini.example
@@ -4,10 +4,10 @@ USERNAME = example@example.com
 PASSWORD = xxxxxxxxxx
 SCHEDULE_ID = 99999999
 MY_SCHEDULE_DATE = 2024-01-01
-; Spanish - Colombia
-COUNTRY_CODE = es-co
-; Bogotá
-FACILITY_ID = 25
+; English - Canada
+COUNTRY_CODE = en-ca
+; Toronto
+FACILITY_ID = 94
 
 [CHROMEDRIVER]
 ; Details for the script to control Chrome
@@ -17,9 +17,14 @@ HUB_ADDRESS = http://localhost:9515/wd/hub
 
 [PUSHOVER]
 ; Get push notifications via https://pushover.net/ (optional)
-PUSH_TOKEN = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-PUSH_USER = xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+PUSH_TOKEN = 
+PUSH_USER = 
 
 [SENDGRID]
 ; Get email notifications via https://sendgrid.com/ (optional)
 SENDGRID_API_KEY = 
+
+[TELEGRAM]
+; Send message through telegram bot https://core.telegram.org/ (optional)
+BOT_TOKEN = 
+CHAT_ID = 
